; ModuleID = '/home/carl/AnghaBench/freebsd/tools/regression/posixsem/extr_posixsem.c_getvalue_invalid_semaphore.c'
source_filename = "/home/carl/AnghaBench/freebsd/tools/regression/posixsem/extr_posixsem.c_getvalue_invalid_semaphore.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@STDERR_FILENO = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [28 x i8] c"ksem_getvalue() didn't fail\00", align 1
@errno = common dso_local global i64 0, align 8
@EINVAL = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [14 x i8] c"ksem_getvalue\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @getvalue_invalid_semaphore to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @getvalue_invalid_semaphore() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @STDERR_FILENO, align 4
  %3 = call i64 @ksem_getvalue(i32 %2, i32* %1)
  %4 = icmp sge i64 %3, 0
  br i1 %4, label %5, label %7

5:                                                ; preds = %0
  %6 = call i32 @fail_err(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str, i64 0, i64 0))
  br label %15

7:                                                ; preds = %0
  %8 = load i64, i64* @errno, align 8
  %9 = load i64, i64* @EINVAL, align 8
  %10 = icmp ne i64 %8, %9
  br i1 %10, label %11, label %13

11:                                               ; preds = %7
  %12 = call i32 @fail_errno(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.1, i64 0, i64 0))
  br label %15

13:                                               ; preds = %7
  %14 = call i32 (...) @pass()
  br label %15

15:                                               ; preds = %13, %11, %5
  ret void
}

declare dso_local i64 @ksem_getvalue(i32, i32*) #1

declare dso_local i32 @fail_err(i8*) #1

declare dso_local i32 @fail_errno(i8*) #1

declare dso_local i32 @pass(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
